@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.4 2004/06/02 15:09:01 taya Exp $
+# $NetBSD: Makefile,v 1.5 2004/06/18 22:40:04 xtraeme Exp $
 
 MOZILLA=	firefox
 MOZILLA_BIN=	firefox-bin
 MOZCONFDIR=	.mozilla
 MOZ_VER=	0.8
-PKGREVISION=	3
+PKGREVISION=	4
 EXTRACT_SUFX=	.tar.bz2
 DISTNAME=	${MOZILLA}-source-${MOZ_VER}
 MASTER_SITES=	http://ftp.mozilla.org/pub/mozilla.org/firefox/releases/${MOZ_VER}/ \
